# litestar-example

./: .copier-answers.yaml  .dockerignore  .gitattributes  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Taskfile.dist.yaml  docker-compose.yaml  flake.nix  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml  setup.sh
.devcontainer/image/: setup.sh
.github/workflows/: lint.yaml  registry.yaml
.trunk/: trunk.yaml
.trunk/configs/: .prettierrc.yaml
docs/: docusaurus.config.js  docusaurus.config.mts
docs/docs/: 01-Index.md  02-Usage.md  03-Configuration.md
src/litestar_example/: __main__.py  cli.py  console.py  server.py  state.py
src/litestar_example/api/: __init__.py  app.py  exceptions.py  lifespans.py  openapi.py  validator.py
src/litestar_example/api/routes/: controller.py  router.py
src/litestar_example/api/routes/ping/: controller.py  models.py  router.py  service.py
src/litestar_example/api/routes/root/: controller.py  models.py  router.py
src/litestar_example/api/routes/sse/: controller.py  (+3 more)
src/litestar_example/config/: __init__.py  base.py  builder.py  models.py
src/litestar_example/models/: __init__.py  base.py  data.py  events.py
src/litestar_example/models/events/: bar.py  enums.py  event.py  fields.py  foo.py  test.py  types.py
src/litestar_example/services/events/: models.py  service.py
src/litestar_example/services/ping/: models.py  service.py
src/litestar_example/services/test/: models.py  service.py
src/litestar_example/utils/: time.py
tests/integration/: conftest.py
tests/unit/: test_foo.py
(+4 files in other folders)
